2010-03-23      Evgeny V. Kokovikhin
	* core/Form/Primitives/PrimitiveInet.class.php: right check for ip. 
	Thanks to Timofey Anisimov.

2010-03-15      Evgeny V. Kokovikhin
	* main/Markup/Feed/YandexRssFeedFormat.class.php,
	main/Markup/Feed/YandexRssFeedItem.class.php,
	main/Markup/Feed/YandexRssItemWorker.class.php,
	main/Markup/Feed/FeedItem.class.php,
	main/Markup/Feed/FeedReader.class.php:
	+ Yandex rss format support: for details of format
	see http://partner.news.yandex.ru/tech.pdf
	thanks to Alexander S. Krotov

2010-02-25      Evgeny V. Kokovikhin
	* main/Net/Mail/Mail.class.php: send() without returnPatn fixed.

2010-02-23	Sergey S. Sergeev

	* main/OpenId/OpenIdConsumer.class.php,
	main/OpenId/OpenIdExtension.class.php,
	main/OpenId/OpenIdExtensionAttributeExchange.class.php,
	main/OpenId/OpenIdCredentials.class.php,
	main/OpenId/OpenIdExtensionSreg.class.php: openId 2.0 support, 
	extensions support implemented, sreg and attribute exchange 
	supports - thanks to Alexander V. Solomatin (aka Lom).

	* main/Net/Http/CurlHttpClient.class.php: curl multi send implemented.

	* main/Net/Http/HttpMethod.class.php: methods added.

2010-02-21	Sergey S. Sergeev

	* main/Base/Hstore.class.php: set(), drop() added.

	* main/Net/Mail/Mail.class.php: setReturnPath(), getReturnPath() added.

2010-02-20	Sergey S. Sergeev

	* core/Logic/Expression.class.php, core/Logic/BinaryExpression.class.php:
	modulus logic implemented.

	* core/Logic/HstoreExpression.class.php: containHstore(),
	containValueList() added.

	* core/DB/Dialect.class.php, core/DB/ImaginaryDialect.class.php,
	core/DB/LiteDialect.class.php, core/DB/MyDialect.class.php,
	core/DB/PostgresDialect.class.php, core/OSQL/DeleteQuery.class.php,
	core/OSQL/InsertOrUpdateQuery.class.php, core/OSQL/InsertQuery.class.php,
	core/OSQL/QuerySkeleton.class.php, core/OSQL/SelectQuery.class.php:
	refactoring code. OSQL INSERT/UPDATE/DELETE RETURNING, INSERT from SELECT
	clause implemented.
